--- a/config/strategies/downuptake.toml
+++ b/config/strategies/downuptake.toml
@@ -1,7 +1,9 @@
 weight = 21
 starting_trend = 'neutral'
 entry_price = 0
+dismiss_gain = -0.05
+max_patience = 480
 
 [thresholds]
-gain = 0.1
-MAdiff = 200
+gain = 0.2
+MAdiff = 0.025
